# app/modules/auth/domain/services/auth_services.go
@@ -12,17 +12,19 @@ import (
 )
 
 type AuthServices struct {
-	Repository   *repositories.AuthRepository
-	Validator    *validator.ValidatorAdapter
-	LoginUseCase *usecases.LoginUseCase
+	Repository    *repositories.AuthRepository
+	Validator     *validator.ValidatorAdapter
+	LoginUseCase  *usecases.LoginUseCase
+	LogoutUseCase *usecases.LogoutUseCase
 }
 
 func NewAuthServices(db *pgsql.DBAdapter, validator *validator.ValidatorAdapter) *AuthServices {
 	repo := repositories.NewAuthRepository(db)
 	// Add your code here
 	return &AuthServices{
-		Validator:    validator,
-		LoginUseCase: usecases.NewLoginUseCase(repo),
+		Validator:     validator,
+		LoginUseCase:  usecases.NewLoginUseCase(repo),
+		LogoutUseCase: usecases.NewLogoutUseCase(repo),
 	}
 }
 
@@ -70,5 +72,38 @@ func (s *AuthServices) Login(c *gin.Context) {
 	c.JSON(
 		http.StatusOK,
 		gin.H{"data": data},
+	)
+}
+
+// Logout Desloguear un usuario usado nuestra base de datos
+//
+//	@Summary		Desloguear un usuario usado nuestra base de datos
+//	@Description	Desloguear un usuario usado nuestra base de datos
+//	@Tags			Auth
+//	@Param			token	header	string	true	"Token"
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Success		200	{object}	gin.H{data=nil}
+//	@Failure		400	{object}	gin.H{data=nil}
+//	@Failure		401	{object}	gin.H{data=nil}
+//	@Failure		404	{object}	gin.H{data=nil}
+//	@Failure		500	{object}	gin.H{data=nil}
+//	@Router			/auth/logout [post]
+func (s *AuthServices) Logout(c *gin.Context) {
+	token := c.GetHeader("Authorization")
+
+	err := s.LogoutUseCase.Logout(token)
+	if err != nil {
+		c.JSON(
+			http.StatusInternalServerError,
+			gin.H{"error": err.Error()},
+		)
+		return
+	}
+
+	c.JSON(
+		http.StatusOK,
+		gin.H{"data": "User logged out successfully"},
 	)
 }
